# IntelliSFIA

./: .env.development  .env.production.template  .gitignore  .pre-commit-config.yaml  AI_ENHANCEMENT_SUMMARY.md  CHANGELOG.md  CLI_REAL_WORLD_EXAMPLES.md  COMPREHENSIVE_TEST_REPORT.md  Dockerfile.api  LICENSE  MULTI_LLM_INTEGRATION_GUIDE.md  OLLAMA_SUCCESS.md  PROJECT_COMPLETE.md  README.md  README_OLLAMA.md  ROADMAP.md  SFIA9_INTEGRATION_COMPLETE.md  SFIA9_RDF_INTEGRATION_COMPLETE.md  SFIA_LICENSE_NOTE  SUPPORT.md  WEB_APPLICATION_STATUS.md  cli_examples_working.py  conversion_readme.md  crewai_multi_agent.py  demo_ollama_integration.py  deploy-production.bat  deploy-production.sh  docker-compose.prod-ollama.yml  init-db.sql  intellisfia_ai_api.py  nginx.conf  pyproject.toml  pyproject_intellisfia.toml  quick_api.py  quick_test.py  requirements-crewai.txt  requirements-docker.txt  requirements.txt  setup_local_production.py  simple_api.py  (+10 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: production-deploy.yml  workflow.yml
backend/: Dockerfile  main.py  requirements.txt
config/: requirements-ollama.txt
data/: SFIA_9_2025-10-21.ttl  sfia9_attributes.json  sfia9_levels.json  sfia9_skills.json  sfia_ontology.ttl
deployment/: .env.example  DEPLOYMENT.md  README.md  docker-compose.prod.yml
deployment/kubernetes/: intellisfia-app.yaml
deployment/monitoring/grafana/provisioning/dashboards/: dashboards.yml
deployment/monitoring/grafana/provisioning/datasources/: datasources.yml
deployment/monitoring/prometheus/: alert_rules.yml  prometheus.yml  recording_rules.yml
deployment/nginx/: nginx.conf
deployment/scripts/: import-sfia-data.sh  init-db.sh
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Complete_SFIA_Enhancement_Guide.md  DOCUMENTATION_CLEANUP_SUMMARY.md  FINAL_COMPREHENSIVE_TEST_RESULTS.md  INTELLISFIA_REBRAND.md  IoC_IMPLEMENTATION_STATUS.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_REPORT.md  PORTFOLIO_ASSESSMENT.md  README.md  README_AI_ENHANCED.md  README_COMPLETE.md  RELEASE_NOTES.md  SECURITY.md
docs/archive/: enhanced_ontology_design.md  sparql_queries.md
enhancements/: implementation_plan.md
examples/: demo_advanced_ai.py  demo_enhanced_capabilities.py
scripts/: generate_optimization_report.py  intellisfia-api.py  intellisfia-cli.py  setup_ollama.sh
sfia_ai_framework/: DEPLOYMENT.md  README.md  demo.py  pyproject.toml  run_web_app.bat
sfia_ai_framework/deployment/: production_guide.py
sfia_ai_framework/examples/: usage_examples.py
sfia_ai_framework/frontend/: .tsbuildinfo  Dockerfile.prod  README.md  mock-server.js  package-lock.json  package.json  test-server.js  tsconfig.json
sfia_ai_framework/frontend/public/: index.html  manifest.json
sfia_ai_framework/frontend/src/: App.tsx  global.d.ts  index-complex.tsx  index-enhanced.tsx  index-minimal.tsx  index-original.tsx  index-simple.tsx  index-test.tsx  index-with-navigation.tsx  index.css
sfia_ai_framework/frontend/src/components/: AIComponents.tsx  LLMProviderSelector.tsx  Layout.tsx  RDFVisualization.tsx
sfia_ai_framework/frontend/src/hooks/: index.ts
sfia_ai_framework/frontend/src/pages/: Analytics.tsx  Dashboard.tsx  DepartmentAnalysis.tsx  EmployeeAnalysis.tsx  EnterpriseIntegration.tsx  KnowledgeGraph.tsx  MultiAgentAI.tsx  OrganizationInsights.tsx  PortfolioAssessment.tsx  Reports.tsx  SFIA9Explorer.tsx  Scenarios.tsx  Settings.tsx
sfia_ai_framework/frontend/src/services/: api.ts
sfia_ai_framework/sfia_ai_framework/: __init__.py
sfia_ai_framework/sfia_ai_framework/cli/: __init__.py
sfia_ai_framework/sfia_ai_framework/core/: agents.py  enhanced_agents.py  knowledge_graph.py  reasoning.py
sfia_ai_framework/sfia_ai_framework/data/: sfia-9_current-standard_en_US_250129.csv  sfia-9_current-standard_en_US_2501291.csv  sfia-9_current-standard_en_US_2501292.csv  sfia9_data_processor.py  sfia9_rdf_converter.py
sfia_ai_framework/sfia_ai_framework/data/sfia9/: sfia9_attributes.json  sfia9_categories.json  sfia9_knowledge_base.py  sfia9_levels.json  sfia9_models.py  sfia9_skills.json  sfia9_subcategories.json
sfia_ai_framework/sfia_ai_framework/enterprise/: __init__.py  connectors.py  integration_manager.py  real_time_engine.py
sfia_ai_framework/sfia_ai_framework/enterprise/config/: integration_config.yaml
sfia_ai_framework/sfia_ai_framework/examples/: enterprise_integration_examples.py  scenarios.py
sfia_ai_framework/sfia_ai_framework/llm/: providers.py
sfia_ai_framework/sfia_ai_framework/models/: portfolio_models.py  sfia_models.py
sfia_ai_framework/sfia_ai_framework/sdk/: __init__.py
sfia_ai_framework/sfia_ai_framework/services/: ollama_service.py  portfolio_assessment_service.py  sfia9_service.py
sfia_ai_framework/sfia_ai_framework/tests/: test_framework.py
sfia_ai_framework/sfia_ai_framework/web/: api.py  app.py  intellisfia_app.py
sfia_rdf/: convert_sfia.py  levels_of_responsibility.ttl  namespaces.py  sfia_parser.py
sfia_rdf/parsers/: attributes_parser.py  levels_parser.py  skills_parser.py
sfia_rdf/parsers/enhanced/: __init__.py  competency_parser.py  pathway_parser.py  roles_parser.py
sfia_rdf/tests/: attributes_test.py  conversion_test.py  levels_test.py  skills_test.py  test_sfia-8_en_220221.csv  tests.py  utils_test.py
sfia_rdf/tests/test_files/: attributes_test.csv  levels_test.csv  skills_test.csv
src/intellisfia/: __init__.py  api.py  cli.py  generate_sfia_data.py  llm_providers.py  ollama_service.py  sdk.py  sfia_converter.py  validate_rdf.py
tests/: test_sdk_comprehensive.py  test_sfia9_integration.py
validation/: ontology_validator.py
