[tool.poetry]
name = "sfia_rdf"
version = "0.1.0"
description = ""
authors = ["mattecasu <mattecasu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.12.3"
rdflib = "^7.0.0"
pytest = "^8.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
