[tool.poetry]
name = "sfia_rdf"
version = "1.0.0"
description = ""
authors = ["mattecasu <matteo.casu@semanticpartners.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
rdflib = "^7.1.4"
pytest = "^8.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
