[tool.poetry]
name = "sfia-ai-framework"
version = "1.0.0"
description = "Collaborative AI Multi-Agent Framework for SFIA Ontology Intelligence"
authors = ["SFIA AI Team <ai@sfia-partners.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
# Core AI and ML
crewai = "^0.41.1"
langchain = "^0.2.14"
langchain-openai = "^0.1.23"
langchain-community = "^0.2.12"
# Knowledge Graph and Semantic Processing
neo4j = "^5.23.1"
rdflib = "^7.1.4"
networkx = "^3.2.1"
# Web Framework and API
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
streamlit = "^1.38.0"
# Data Processing and Analysis
pandas = "^2.1.4"
numpy = "^1.26.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
# Visualization
plotly = "^5.17.0"
graphviz = "^0.20.1"
pyvis = "^0.3.2"
# Database and Storage
sqlalchemy = "^2.0.23"
redis = "^5.0.1"
# Testing and Quality
pytest = "^8.4.0"
pytest-asyncio = "^0.21.1"
# Utilities
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
typer = "^0.9.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sfia-ai = "sfia_ai_framework.cli:app"